--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
   --white: #fff;
   --background-red: #F84646;
   --background-white: #fff;
+  --background-gray: #F4F5F7;
 }
 
 * {
@@ -17,6 +18,11 @@
   font-style: normal;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .btn {
   font-weight: 700;
   font-size: 14px;
@@ -25,23 +31,32 @@
   background: var(--background-red);
   border-radius: 5px;
   padding: 10px 20px;
-  transition: 0.4s all ease;
+  transition: 0.3s all ease;
 }
 
 .btn:hover {
-  background: #ee5555;
+  background: #e63838;
 }
 
 .btn:active {
   transform: scale(0.9);
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
+@media screen and (max-width: 1240px) {
+  .container {
+    padding: 0 40px !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 0 20px !important;
+  }
 }
 
 /* Universal codes end*/
+
+
 
 
 
@@ -54,6 +69,83 @@
 
 
 /* Header start */
+
+.header-section {
+  background-image: url(../images/header-background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 754px;
+}
+
+.header-section .navbar ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  justify-content: end;
+}
+
+.header-section .navbar ul a {
+  margin-right: 40px;
+  margin-top: 45px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--black);
+}
+
+.header-section .navbar ul a:nth-child(6) {
+  margin-right: 0;
+  color: var(--white);
+}
+
+.header-section .header-content h1 {
+  max-width: 665px;
+  margin-top: 135px;
+  margin-bottom: 20px;
+  font-weight: 800;
+  font-size: 64px;
+  line-height: 82px;
+  color: var(--black);
+}
+
+.header-section .header-content p {
+  max-width: 650px;
+  margin-bottom: 50px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  letter-spacing: 0.2px;
+  color: var(--black);
+}
+
+.header-section .header-input {
+  max-width: 502px;
+  height: 73px;
+  position: relative;
+}
+
+.header-section .header-input input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+  padding: 9px 32px;
+  padding-right: 140px;
+}
+
+.header-section .header-input .header-btn {
+  padding: 20px 37px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 6px;
+  top: 6px;
+}
+
+/* Media query mobile */
+@media screen and (max-width: 480px) {}
 
 /* Header end */
 
