--- a/styles/main.css
+++ b/styles/main.css
@@ -255,7 +255,7 @@
 /* Test start */
 .test-section{
   /* background: var(--background-red); */
-  background-image:  url("./../images/image\ 1.png") ,linear-gradient(#F84646, #F84646);
+  background-image: url(../images/1.png) ;
 }
 .test-section-name h1{ 
   font-family: 'Manrope';
@@ -284,6 +284,7 @@
 .test-section-footer{
   display: flex;
   align-items: center;
+  padding-bottom: 50px;
 }
 .test-section-text1{
 font-family: 'Manrope';
