--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@
   transform: scale(0.9);
 }
 
-@media screen and (max-width: 1240px) {
+@media screen and (max-width: 1280px) {
   .container {
     padding: 0 40px !important;
   }
@@ -191,14 +191,13 @@
 }
 
 .key-main {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 298px);
   justify-content: space-between;
-  flex-wrap: wrap;
   gap: 90px;
 }
 
 .key-main-box {
-   width: 298px;
    text-align: center;
 }
 
@@ -225,10 +224,26 @@
   z-index: -1;
 }
 
-.key-main-box .key-main-box-image::before {
-  right: 0;
-  top: 0;
-  background: var(--pink-circle);
+.key-main-box:nth-child(2) .key-main-box-image::before {
+  left: 0;
+  background: var(--purple-circle);
+}
+
+.key-main-box:nth-child(3) .key-main-box-image::before {
+  background: var(--light-blue-circle);
+}
+
+.key-main-box:nth-child(4) .key-main-box-image::before {
+  left: 0;
+  background: var(--light-blue-circle);
+}
+
+.key-main-box:nth-child(5) .key-main-box-image::before {
+  background: var(--red-circle);
+}
+
+.key-main-box:nth-child(6) .key-main-box-image::before {
+  background: var(--yellow-circle);
 }
 
 .key-main-box h1 {
