--- a/styles/main.css
+++ b/styles/main.css
@@ -558,7 +558,7 @@ color:var(--white)
 }  
 
 .footer-section .container p a{
-  color: var(--background-gray)
+  color: var(--background-gray);
   padding-bottom: 24px;
   display: inline-block;
   font-weight: 400;
@@ -590,17 +590,123 @@ color:var(--white)
     
 }
 
-@media screen and (max-width: 1240px) {
-  .container {
-    padding: 0 40px !important;
-  }
-}
+/* Media */
 
-@media screen and (max-width: 480px) {
-  .container {
-    padding: 0 20px !important;
+/* 
+@media screen and (max-width: 768px) {
+  .footer-box{
+    display: flex;
+    gap: 100px;
+    padding-top: 80px;
   }
-}
+  
+  .footer-section {
+    background-color: var(--background-red);
+  }
+  
+  
+  .footer-section .container h4 a{
+    color: var(--background-white);
+    display: inline-flex;
+    padding-bottom: 24px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+  }  
+  
+  .footer-section .container p a{
+    color: var(--background-gray);
+    padding-bottom: 24px;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+  }  
+  
+  .footer-section .container .footer-box p a{
+    color: var(--background-gray);
+  }
+  
+  .footer-section .container .footer-bottom-box .footer-copyright p a{
+    color: var(--background-gray);
+  }
+  
+  .footer-section .container .footer-bottom-box {
+    padding-top: 50px;
+  }
+  
+  .footer-section .container .footer-bottom-box{
+    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .footer-section .container .footer-bottom-box .footer-right-logo{
+      display: flex;
+      gap: 25px;
+      
+  }
+  
+} */
+
+
+/* mobile media */
+
+/* @media screen and (max-width: 480px) {
+  .footer-box{
+   
+    gap: 100px;
+    padding-top: 80px;
+  }
+  
+  .footer-section {
+    background-color: var(--background-red);
+  }
+  
+  
+  .footer-section .container h4 a{
+    color: var(--background-white);
+    display: inline-flex;
+    padding-bottom: 24px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+  }  
+  
+  .footer-section .container p a{
+    color: var(--background-gray);
+    padding-bottom: 24px;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+  }   */
+  
+  /* .footer-section .container .footer-box p a{
+    color: var(--background-gray);
+  }
+  
+  .footer-section .container .footer-bottom-box .footer-copyright p a{
+    color: var(--background-gray);
+  }
+  
+  .footer-section .container .footer-bottom-box {
+    padding-top: 50px;
+  }
+  
+  .footer-section .container .footer-bottom-box{
+    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .footer-section .container .footer-bottom-box .footer-right-logo{
+      display: flex;
+      gap: 25px;
+      
+  } */
+  
+
 
 
 
