--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@
   transform: scale(0.9);
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1280px) {
   .container {
     padding: 0 40px !important;
   }
@@ -264,6 +264,25 @@
   color: var(--black);
 }
 
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .key-main {
+    display: grid;
+    grid-template-columns: repeat(2, 298px);
+    justify-content: space-between;
+    gap: 90px;
+  } 
+}
+
+@media screen and (max-width: 769px) {
+  .key-main {
+    display: grid;
+    grid-template-columns: repeat(1, 298px);
+    justify-content: center;
+    gap: 80px;
+  }
+}
+
 /* Key end */
 
 
@@ -378,6 +397,7 @@ color:var(--white)
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 24px;
   margin-top: 48px;
 }
@@ -385,6 +405,7 @@ color:var(--white)
   display: flex;
   flex-direction: column;
   gap: 24px;
+  flex-wrap: wrap;
 }
 .referans-logo a{
   background: var(--background-white);
@@ -398,8 +419,7 @@ color:var(--white)
   padding: 15px 20px;
 }
 .referans-logoes .referans-logo a img{
-  width: 90%;
-  transition: all 0.4s ease;
+  width: 100%;
 }
 .referans-logoes .referans-logo a{
   font-style: normal;
@@ -414,44 +434,6 @@ color:var(--white)
 .referans-logoes .referans-logo a i{
   font-size: 15px;
   margin-top: 3px;
-  transition: all 0.4s ease;
-}
-.referans-logoes .referans-logo a:hover  i{
-  transform: translateX(8px);
-}
-.referans-logo a:hover img{
-  width: 110%;
-}
-@media screen and (max-width: 1040px) {
-  .container {
-    padding: 0 40px !important;
-  }
-  .referans-section .container .referans-logoes{
-    flex-direction: column;
-  }
-  .referans-section .referans-logoes .referans-logo:nth-child(4){
-    display: none;
-  }
-    .referans-section .referans-logoes .referans-logo:nth-child(5) {
-      display: none;
-    }
-}
-
-@media screen and (max-width: 480px) {
-  .container {
-    padding: 0 20px !important;
-  }
-  .referans-section .container h1{
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 42px;
-  }
-  .referans-section .container p{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 32px;
-    margin-top: 14px;
-  }
 }
 /* Referans end */
 
@@ -616,7 +598,7 @@ color:var(--white)
 }  
 
 .footer-section .container p a{
-  color: var(--background-gray);
+  color: var(--background-gray)
   padding-bottom: 24px;
   display: inline-block;
   font-weight: 400;
