FINISH: Connection section

--- a/styles/main.css
+++ b/styles/main.css
@@ -410,41 +410,45 @@ color:var(--white)
 
 /* Connection start */
 
+.connection-section {
+  padding: 160px 0;
+}
 
-.connection-section .container .group7 {
-  height: 450px;
+.connection-section .container {
+  display: flex;
+  justify-content: center;
   text-align: center;
-
 }
-
-.connection-section .container .group7 *{
-  margin-top: 30px;
-}
-
 
 .connection-section .container .user{
-  position: relative;
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-bottom: 10px;
 }
 
+.connection-section .container .user {
+  margin-bottom: 10px;
+  position: relative;
+  display: inline-block;
+}
+
+.connection-section .container .user::before {
+  position: absolute;
+  content: '';
+  width: 61px;
+  height: 61px;
+  right: 0;
+  top: 0;
+  border-radius: 50%;
+  background: var(--background-red);
+  z-index: -1;
+}
 
 .connection-section .container .connection-user{
   width: 120px;
   height: 120px;
 }
-
-
-.connection-section .container .connection-user-alana{
-  position: absolute;
-  left: 590px;
-  top: 2px;
-  width: 61px;
-  height: 61px;
-  opacity: .6;
-}
-
 
 .connection-section .container .bize-ulasin{
   font-family: 'Manrope';
@@ -452,7 +456,7 @@ color:var(--white)
   font-weight: 800;
   font-size: 48px;
   line-height: 32px;
-
+  margin-bottom: 20px;
   color: #000000;
 }
 
@@ -462,7 +466,7 @@ color:var(--white)
   font-weight: 500;
   font-size: 18px;
   line-height: 32px;
-
+  margin-bottom: 30px;
   color: #000000;
 }
 
@@ -472,55 +476,20 @@ color:var(--white)
   font-size: 24px;
   line-height: 20px;
   background: var(--background-red);
-  border-radius: 5px;
-  padding: 10px 20px;
+  border-radius: 8px;
+  padding: 25px 40px;
   transition: 0.4s all ease;
-  
+  cursor: pointer;
   color: #FFFFFF;
+  border: none;
 }
-
-
 
 .connection-section .container .bize-ulasin-button:hover{
-
-  background: #b82d2d;
-
-
+  background: #cf3232;
 }
-
-
-.connection-section .container .bize-ulasin-button .button-text-2{
-  display: none;
-}
-
-
-.connection-section .container .bize-ulasin-button .button-text-1{
-  display: inline;
-}
-
-
-
-.connection-section .container .bize-ulasin-button:active .button-text-1{
-  display: none;
-}
-
-
-.connection-section .container .bize-ulasin-button:active .button-text-2{
-  display: inline;
-  font-size: 24px;
-}
-
 
 .connection-section .container .bize-ulasin-button:active{
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 20px;
-  background-color: rgb(219, 13, 13);
-  border-radius: 5px;
-  padding: 10px 20px;
-  transition: 0.4s all ease;
-  
-  color: #FFFFFF;
+  transform: scale(0.9);
 }
 
 
@@ -558,7 +527,7 @@ color:var(--white)
 }  
 
 .footer-section .container p a{
-  color: var(--background-gray)
+  color: var(--background-gray);
   padding-bottom: 24px;
   display: inline-block;
   font-weight: 400;
